--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.73.5",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.6.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
