--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-charts-wrapper": "^0.6.0",
