--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.73.5",
     "react-native-charts-wrapper": "^0.6.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^7.2.1",
